# diplom

./: README.md
another_usb_try/usb_probe/: .cproject  usb_probe.ioc
another_usb_try/usb_probe/Core/Inc/: main.h
qt_app/diplom_app/: CMakeLists.txt  SerialPortReader.h  avg_array.h  comander.h  coordinates.h  datadisplayer.cpp  datadisplayer.h  filterdialog.cpp  filterdialog.ui  generator.h  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mongoservice.cpp  mongoservice.h  rolewindow.cpp  rolewindow.h  test_database.js  testgenerator.cpp  testgenerator.h  trilaterator.cpp  trilaterator.h  violation_log.cpp  violation_log.h
qt_app/diplom_app/drafts/график/: a.cpp
qt_app/diplom_app/mongodb/: mongoservice.cpp  mongoservice.h  test_database.js  text_database_displayer.cpp  text_database_displayer.h  trackerdb.cpp  trackerdb.h
qt_app/diplom_app/mongodb/movement_rule/: movement_rule.cpp  movement_rule.h  movementrulelistdialog.cpp  movementrulelistdialog.h  movementrulelistdialog.ui
qt_app/diplom_app/mongodb/object/: object.cpp  object.h  objectlistdialog.cpp  objectlistdialog.h  objectlistdialog.ui
qt_app/diplom_app/mongodb/sector/: sector.cpp  sector.h  sectorlistdialog.cpp  sectorlistdialog.h  sectorlistdialog.ui
qt_app/diplom_app/mongodb/violation_log/: filterdialog.cpp  filterdialog.h  violation_log.cpp
stm/anchor_MCU_programm/: .cproject  usb_probe.ioc
stm/anchor_MCU_programm/Core/Src/platform/: deca_spi.c  port.h
stm/anchor_MCU_programm/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: stm32f10x.h
stm/anchor_MCU_programm/Libraries/STM32F10x_StdPeriph_Driver/inc/: misc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_cec.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_pwr.h  stm32f10x_sdio.h  stm32f10x_tim.h  stm32f10x_usart.h  stm32f10x_wwdg.h
stm/anchor_MCU_programm/Release/: objects.list
stm/anchor_MCU_programm/drafts/: X.c  Y.c  Z.c
stm/cube_MX_Generaed/EVK1000_CubeMX/: .cproject  .mxproject  .project  EVK1000_CubeMX Debug.launch  EVK1000_CubeMX.ioc
stm/cube_MX_Generaed/EVK1000_CubeMX/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
stm/cube_MX_Generaed/EVK1000_CubeMX/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm/diploma/: .cproject  .project  diploma Debug.launch
stm/diploma/Debug/: makefile  objects.list  sources.mk
stm/diploma/Debug/Libraries/CMSIS/CM3/CoreSupport/: subdir.mk
stm/diploma/Debug/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: subdir.mk
stm/diploma/Debug/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/: subdir.mk
stm/diploma/Debug/Libraries/STM32F10x_StdPeriph_Driver/src/: subdir.mk
stm/diploma/Debug/Src/: main.d  main.su  subdir.mk
stm/diploma/Debug/Startup/: subdir.mk
stm/diploma/Debug/decadriver/: deca_device.d  deca_device.su  deca_params_init.d  subdir.mk
stm/diploma/Debug/platform/: deca_mutex.d  deca_mutex.su  deca_sleep.d  deca_sleep.su  deca_spi.d  deca_spi.su  lcd.d  lcd.su  port.d  port.su  stm32f10x_it.d  stm32f10x_it.su  subdir.mk  syscalls.d
stm/diploma/Libraries/STM32F10x_StdPeriph_Driver/src/: stm32f10x_exti.c
stm/diploma/Release/Src/: subdir.mk
stm/diploma/Src/: main.c
stm/diploma/decadriver/: deca_device.c
stm/diploma/platform/: port.c  port.h  stm32f10x_conf.h
stm/diploma_backup/Libraries/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_flash.c
stm/diploma_backup/Release/: makefile
stm/diploma_backup/Src/: main.c
stm/diploma_backup/platform/: port.h
stm/usb_backup/usb_probe/: .mxproject  usb_probe Debug.launch
stm/usb_backup/usb_probe/Core/Src/: main.c
stm/usb_probe/: .project  usb_probe Debug.launch
stm/usb_probe/Core/Inc/: main.h
stm/usb_probe/Core/Src/: stm32f1xx_hal_msp.c
stm/usb_probe/Core/Src/platform/: port.c
stm/usb_probe/Libraries/STM32F10x_StdPeriph_Driver/inc/: stm32f10x_adc.h  stm32f10x_crc.h  stm32f10x_dac.h  stm32f10x_gpio.h  stm32f10x_i2c.h  stm32f10x_iwdg.h  stm32f10x_rcc.h  stm32f10x_rtc.h
stm/usb_probe/Libraries/STM32F10x_StdPeriph_Driver/src/: stm32f10x_flash.c
stm/usb_probe/Release/: makefile  sources.mk
stm/usb_probe/Release/Core/Src/decadriver/: deca_device.su  subdir.mk
stm/usb_probe/Release/Core/Src/platform/: subdir.mk
stm/usb_probe/Release/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
